# ahp-decision-tool-gui

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: agent_skill_commitments.md  implementation_plan.md  task_execution_plan.md  test_verification_structure.md
examples/: car_purchase.json
packaging/: README_RELEASE.md  ahp-gui.spec  build_single_exe.bat  build_single_exe.sh
scripts/: check_loc.py
src/ahp_tool/: __init__.py
src/ahp_tool/core/: __init__.py  ahp_engine.py  consistency.py  constants.py  datamodels.py  exceptions.py  matrix_operations.py  priority_vector.py  synthesis.py
src/ahp_tool/gui/: __init__.py  app.py  hierarchy_editor.py  matrix_input.py  results_view.py  sensitivity_panel.py  theme.py
src/ahp_tool/gui/widgets/: saaty_scale.py
tests/: test_smoke.py
