[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ahp-decision-tool-gui"
version = "1.0.0"
description = "Modern GUI desktop application for Analytic Hierarchy Process (AHP) decision making in Python"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Grok xAI Project Bootstrap", email = "grok@x.ai"}
]
keywords = ["AHP", "decision-making", "multi-criteria", "analytic-hierarchy-process", "GUI", "tkinter", "customtkinter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Environment :: X11 Applications :: Qt",  # even if tkinter, future proof
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
gui = [
    "customtkinter>=5.2",
    "fpdf2>=2.7",  # optional for PDF export; code handles missing gracefully
]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pre-commit>=3.7",
    "hypothesis>=6.100; python_version >= '3.10'",  # for property tests
]
docs = [
    "mkdocs>=1.6",
]

[project.scripts]
ahp-gui = "ahp_tool.gui.app:main"

[project.urls]
Homepage = "https://github.com/oguzhanahan/ahp-decision-tool-gui"
Documentation = "https://github.com/oguzhanahan/ahp-decision-tool-gui/blob/main/docs/implementation_plan.md"
Repository = "https://github.com/oguzhanahan/ahp-decision-tool-gui"
Issues = "https://github.com/oguzhanahan/ahp-decision-tool-gui/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ahp_tool"]

[tool.ruff]
target-version = "py310"
line-length = 88
extend-select = ["I", "UP", "B", "C4", "SIM", "RET", "ARG", "PTH"]
extend-ignore = ["E501"]  # black handles

[tool.ruff.lint.isort]
known-first-party = ["ahp_tool"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
ignore_missing_imports = true  # for customtkinter etc until stubs

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --cov=src/ahp_tool --cov-report=term-missing:skip-covered"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src/ahp_tool"]
branch = true
omit = ["*/__main__.py", "*/gui/app.py"]  # gui often integration tested

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
